--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">MindTeck</string>
-    <string name="search">Search</string>
+    <string name="search">Search By Name</string>
 </resources>
